# ploy-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  Test.ploy  build.rs  log4rs.yaml  type-ideas.txt
.github/workflows/: publish-master.yml
data/: Main.ploy  Sub.ploy  Test-v2.ploy  Test.ploy
data/jobs/: TestJob.yaml
data/python/: test.py  to-upper.py
data/schemas/: MessageSchema.json  NameSchema.json  ToStringOutputSchema.json
proto/: engine.proto  jobworker.proto
src/: main.rs  parser.rs  step.rs
src/actors/: actor_step_context.rs  engine_actor.rs  job_worker_actor.rs  mod.rs  process_actor.rs  process_context.rs
src/definition/: mod.rs  parser.rs  process_definition.rs  step.rs  validator.rs
src/definition/nodes/: activity.rs  call.rs  condition.rs  data.rs  end.rs  flow.rs  input_requests.rs  mod.rs  node.rs  script.rs  start.rs
src/engine/: main-engine.rs  mod.rs  parser.rs  step.rs
src/grpc/: engine_service.rs  job_worker_service.rs  mod.rs
src/steps/: activity.rs  call.rs  condition.rs  data.rs  end.rs  mod.rs  script.rs  start.rs
