[package]
name = "ploy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
