[package]
name = "ploy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11.0"
