[package]
name = "ploy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
quick-xml = { version = "0.31.0", features = ["serialize"] }
tonic = "0.11.0"
prost = "0.12"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
actix = "0.13.3"
actix-rt = "2.4.0"
rustpython = { version = "0.3.0", default-features = false }
futures = "0.3.30"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11.0"
